<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context="com.example.zhf.erp.activity.UserCenterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/setting_changepassword_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_old_pwd" />

        <EditText
            android:id="@+id/pwd_old"
            style="@style/user_center"
            android:hint="旧密码"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_new_pwd" />

        <EditText
            android:id="@+id/pwd_new"
            style="@style/user_center"
            android:hint="新密码长度6-20个字符"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <EditText
            android:id="@+id/confirm"
            style="@style/user_center"
            android:hint="确认密码长度6-20个字符"
            />
        <TextView
            android:id="@+id/set_pwd_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#f00"
            android:layout_marginBottom="5dp"
            android:visibility="gone"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <Button
            android:id="@+id/pwd_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#75AD02"
            android:text="@string/change_ok"
            android:textColor="#ffffff" />

        <CheckBox
            android:id="@+id/set_pwd_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/change_show_pwd" />
    </LinearLayout>
</RelativeLayout>
